--- a/plugin.xml
+++ b/plugin.xml
@@ -35,6 +35,10 @@
             </feature>
         </config-file>
 
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <activity android:label="@string/app_name" android:name="com.facebook.LoginActivity" />
+        </config-file>
+
     </platform>
 
     <!-- ios  @TODO: test! may change. -->
